--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
   "include": [
     "./assets",
     "./src",
+	  "./src/utils/DataManager.ts",
 	  "./src/**/*.ts",
 	  "./src/**/*.d.ts",
     "./engine"
