--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "es6",
     "target": "es6",
     "strict": true,
+	  "lib": ["ES6", "DOM"],             // 或 ["ES2017", "DOM"]，视你的需求而定
     "strictNullChecks": false,
     "noEmitHelpers": true,
     "sourceMap": false,
